# eit-robotic-avatar-two

./: .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  debug.Dockerfile  docker-compose.yaml  radixconfig.yaml  vision.md
.devcontainer/: Dockerfile  cargo-tools.sh  devcontainer.json
.github/workflows/: rust.yml
brain/: Cargo.toml  README.md
brain/src/: camera.rs  lib.rs
brain/tests/: null_camera.rs
client/: Cargo.toml  README.md  index.html  main.css  main.scss
client/js/: index.mjs  viewport.mjs
client/js/modules/: cameras.mjs  rtc.mjs  server.mjs
client/js/view/: RoboticAvatar.mjs  Viewport.mjs
client/proxy/: init_app.sh  server.conf
client/src/: _components.scss  _headset.scss  _login.scss  _robotic.scss  agents.rs  auth.rs  components.rs  headset.rs  login.rs  main.rs  robotic.rs  server.rs  services.rs  ui.rs  views.rs
client/src/agents/: media.rs  minion.rs  robot.rs
client/src/components/: viewport.rs
client/src/headset/: viewport.rs
client/src/robotic/: media.rs  minion.rs  robot.rs  server.rs
client/src/robotic/minion/: viewport.rs
client/src/services/: media.rs  server.rs  tracking.rs  webrtc.rs
client/src/ui/: debug.rs  login.rs  robotic.rs
client/src/ui/debug/: media_selector.rs  messaging_debug.rs
client/src/ui/robotic/: minion.rs  robot.rs
client/src/ui/robotic/minion/: cameras.rs  rtc.rs  server.rs  viewport.rs
client/src/views/: messaging_debug.rs  robotic.rs
common/: Cargo.toml  README.md
common/src/: lib.rs
minion/: Cargo.toml  controller.ino  readme.md
minion/cad2/: Back MotorController Holder v1.f3d  Battery Holder v1.f3d  Car Body Back v1.f3d  Car Body Middle v1.f3d  Car Body Middle-Back v1.f3d  Car Front Cover Slider v1.f3d  Car Front Cover v1.f3d  Car Roof 53mm v1.f3d  Car Roof 92mm v1.f3d  Front MotorController Holder v1.f3d  Pin 30mm v1.f3d  Slider v1.f3d
minion/runbooks/: robot-setup.md
minion/src/: arm.rs  config.rs  controller.rs  drive.rs  main.rs  ros.rs  server.rs  tracking.rs
robot/: Cargo.toml  README.md
robot/src/: config.rs  lib.rs  main.rs  network.rs  robot.rs  server.rs
server/: Cargo.toml  README.md  build.rs
server/src/: api.rs  auth.rs  config.rs  main.rs  messaging.rs  robot.rs  robotic.rs  server.rs  services.rs
server/src/api/: auth.rs  files.rs  messaging.rs  minion.rs  robot.rs
server/src/robotic/: auth.rs  messaging.rs  minion.rs  robot.rs
server/src/robotic/auth/: azure_ad.rs
server/src/services/: auth.rs  minion.rs  robot.rs
server/src/services/auth/: azure_ad.rs
src/: app.js  arduino.rs  arm.rs  drive.rs  index.html  lib.rs  main.rs  tracking.rs  viewport.js
web-client/: Cargo.toml  README.md  index.html
web-client/js/: media_selector.js
web-client/src/: main.rs  media.rs  media_selector.rs  server.rs  views.rs
web-client/src/js/: media.rs
web-client/src/views/: debug_tools.rs  robotic.rs
