[package]
name = "avatar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nokhwa = { version = "0.10.4", features = ["input-native"] }
tokio = { version = "1.0", features = ["rt", "macros"] }
axum = { version = "0.6.20", features = ["ws"] }
parking_lot = "0.12.1"