[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

yew = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
weblog = "0.3.0"
stylist = { version = "0.10", features = ["yew_integration"] }
gloo-utils = "0.1.5"
gloo-net = "0.2.4"
gloo-timers = { version = "0.2", features = ["futures"] }
gloo-storage = "0.2.2"
time = { version = "0.3", features = ["wasm-bindgen"] }
futures = "0.3"

[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = [
    "MediaDevices",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaStream",
    "MediaStreamConstraints",
    "Navigator",
    "Window",
    "HtmlCanvasElement",
    "HtmlVideoElement"
]
