[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

yew = "0.19"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-console = "0.2"
gloo-utils = "0.1"
gloo-net = { version = "0.2", default-features = false, features = [
    "json",
    "http",
] }
gloo-timers = { version = "0.2", features = ["futures"] }
gloo-storage = "0.2"
time = { version = "0.3", features = ["wasm-bindgen"] }
yew-agent = "0.1.0"
url = { version = "2", features = ["serde"] }

[dependencies.web-sys]
version = "0.3"
# We need to enable all the web-sys features we want to use!
features = [
    "MediaDevices",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "Navigator",
    "Window",
    "HtmlCanvasElement",
    "HtmlVideoElement",
    "RtcPeerConnection",
    "RtcRtpSender",
    "RtcRtpReceiver",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcIceGatheringState",
    "RtcSessionDescription",
    "RtcIceServer",
    "RtcConfiguration",
]
