[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

yew = {version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
js-sys = "0.3.63"
gloo-console = "0.2.3"
gloo-utils = "0.1.6"
gloo-net = { version = "0.2.6", default-features = false, features = [
    "json",
    "http",
] }
gloo-timers = { version = "0.2.6", features = ["futures"] }
gloo-storage = "0.2.2"
time = { version = "0.3.22", features = ["wasm-bindgen"] }
url = { version = "2.4.0", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.63"
# We need to enable all the web-sys features we want to use!
features = [
    "MediaDevices",
    "MediaDeviceInfo",
    "MediaDeviceKind",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "Navigator",
    "Window",
    "HtmlCanvasElement",
    "HtmlVideoElement",
    "RtcPeerConnection",
    "RtcRtpSender",
    "RtcRtpReceiver",
    "RtcSessionDescriptionInit",
    "RtcSdpType",
    "RtcIceGatheringState",
    "RtcSessionDescription",
    "RtcIceServer",
    "RtcConfiguration",
]
