[package]
name = "minion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
robot = {path = "../robot" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
pyo3 = {version = "0.17.1", features = ["auto-initialize"]}
serialport = { version = "4.2.0", default-features = false}
tokio = { version = "1", features = ["full"] }