[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
network-interface = "0.1"
dotenvy = "0.15"
