[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

axum = "0.5"
tokio = { version = "1.21", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
dotenvy = "0.15"
parking_lot = "0.12"
uuid = { version = "1.1", features = ["serde", "v4"]}