[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

axum = "0.5.17"
tokio = { version = "1.21", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
dotenvy = "0.15"
parking_lot = "0.12"
uuid = { version = "1.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.6"
jwt = "0.16.0"
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
openidconnect = "2.3.2"
time = { version = "0.3", features = ["serde"]}
rand = "0.8.5"
rust-embed = {version = "6.4", features = ["debug-embed"] }
mime_guess = "2.0"
