[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

axum = {version = "0.6.18" }
tokio = { version = "1.28.2", default-features = false, features = ["rt", "macros"]}
anyhow = "1.0.71"
log = "0.4.18"
env_logger = "0.10.0"
dotenvy = "0.15.7"
parking_lot = "0.12.1"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
serde = { version = "1.0.164", features = ["derive"] }
hmac = "0.12.1"
sha2 = "0.10.6"
jwt = "0.16.0"
serde_json = "1.0.96"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls"] }
openidconnect = "3.2.0"
time = { version = "0.3.22", features = ["serde"]}
rand = "0.8.5"
rust-embed = {version = "6.6.1", features = ["debug-embed"] }
mime_guess = "2.0.4"
